executed basic eda

--- a/01.explorative_data_analysis.ipynb
+++ b/01.explorative_data_analysis.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Import libearies**"
+    "**Import libraries**"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Load imput dataset to perform the analysis**"
+    "**Load input dataset to perform the analysis**"
    ]
   },
   {
